Fix sidebar overflow

--- a/app/stylesheets/builtin-pages/dat-sidebar.less
+++ b/app/stylesheets/builtin-pages/dat-sidebar.less
@@ -337,7 +337,7 @@ section {
 .metadata,
 .files-list,
 .changes {
-  max-height: ~"calc(100vh - 220px)";
+  height: ~"calc(100vh - 175px)";
   overflow-y: auto;
 }
 
